cmake_minimum_required(VERSION 3.29)
project(CS310)

set(CMAKE_CXX_STANDARD 20)

add_executable(ch02ex13 Ch02Exercise13.cpp
        W3Discussion.cpp
        Ch04Exercise16.cpp
        W4Discussion.cpp)
add_executable(ch03ex7 Ch03Exercise7.cpp)
add_executable(w2dis W2Discussion.cpp)
add_executable(w3dis W3Discussion.cpp)
add_executable(ch04ex16 Ch04Exercise16.cpp)
add_executable(w4dis W4Discussion.cpp)
