cmake_minimum_required(VERSION 3.29)
project(CS310)

set(CMAKE_CXX_STANDARD 20)

add_executable(ch02ex13 Ch02Exercise13.cpp)
add_executable(ch03ex7 Ch03Exercise7.cpp)
add_executable(w2dis Discussions/W2Discussion.cpp)
add_executable(w3dis Discussions/W3Discussion.cpp)
add_executable(ch04ex16 Ch04Exercise16.cpp)
add_executable(w4dis Discussions/W4Discussion.cpp)
add_executable(test test.cpp)
add_executable(ch05ex33 Ch05Exercise33.cpp)
add_executable(M4Correction Discussions/Corrections/M4DiscussionCorrection.cpp)
add_executable(w5dis Discussions/W5Discussion.cpp)
add_executable(ch06ex14 Ch06Exercise14.cpp)
add_executable(M5Correction Discussions/Corrections/M5DiscussionCorrection.cpp)
