cmake_minimum_required(VERSION 3.29)
project(CS310)

set(CMAKE_CXX_STANDARD 20)

add_executable(ch02ex13 Ch02Exercise13.cpp)
add_executable(ch03ex7 Ch03Exercise7.cpp)
add_executable(w2dis Discussions/W2Discussion.cpp)
add_executable(w3dis Discussions/W3Discussion.cpp)
add_executable(ch04ex16 Ch04Exercise16.cpp)
add_executable(w4dis Discussions/W4Discussion.cpp)
add_executable(test test.cpp)
add_executable(ch05ex33 Ch05Exercise33.cpp)
add_executable(M4Correction Discussions/Corrections/M4DiscussionCorrection.cpp)
add_executable(w5dis Discussions/W5Discussion.cpp)
add_executable(ch06ex14 Ch06Exercise14.cpp)
add_executable(M5Correction Discussions/Corrections/M5DiscussionCorrection.cpp)
add_executable(w6dis Discussions/W6Discussion.cpp)
add_executable(M6Correction Discussions/Corrections/M6DiscussionCorrection.cpp)
add_executable(ch07ex4 Ch07Exercise4.cpp)
add_executable(w7dis Discussions/W7Discussion.cpp)
add_executable(ch08ex7 Ch08Exercise7.cpp)
add_executable(M7Correction Discussions/Corrections/M7DiscussionCorrection.cpp)
add_executable(w8dis Discussions/W8Discussion.cpp)
add_executable(ch10ex21 Ch10Exercise21.cpp)
add_executable(M8Correction Discussions/Corrections/M8DiscussionCorrection.cpp)
add_executable(w9dis Discussions/W9Discussion.cpp)
add_executable(ch11ex13 Ch11Exercise13.cpp)
add_executable(M9Correction Discussions/Corrections/M9DiscussionCorrection.cpp)
add_executable(w10dis Discussions/W10Discussion.cpp)
add_executable(w12ex03 Ch12Exercise03.cpp)